--- a/ch1/more.html
+++ b/ch1/more.html
@@ -55,17 +55,23 @@
         <p>我的其他網頁資訊連結與電子郵件如下︰</p>
 
           <div class="content_container">
-            <h3>其他網頁資訊連結︰</h3>
-              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="部落格" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="我的寫作" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="履歷" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
+            <h3>履歷:</h3>
+              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="履歷(html)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="履歷(pdf)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>電子郵件︰</h3>
               <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="../images/email-icon.png" title="電子郵件" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
+
+          <div class="content_container">
+            <h3>其他網頁資訊連結︰</h3>
+              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="部落格" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="我的寫作" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
+          </div><!--close content_container-->
+
 		  </div><!--close content_item-->
 
       <!--insert 3 space lines before footer-->
