--- a/en/more.html
+++ b/en/more.html
@@ -55,17 +55,23 @@
         <p>My other related links and email are here.</p>
 
           <div class="content_container">
-            <h3>Links:</h3>
-              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="Blog" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My writing" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="Resume" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
+            <h3>Resume:</h3>
+              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="Resume(html)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/resume.html"><img style="vertical-align: middle;" src="../images/User-Coat-Red-icon.png" title="Resume(pdf)" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
           </div><!--close content_container-->
 
           <div class="content_container">
             <h3>Email:</h3>
               <a href="mailto:gamma_chen@yahoo.com.tw"><img style="vertical-align: middle;" src="../images/email-icon.png" title="email" width="32" height="32" />  gamma_chen@yahoo.com.tw</a>
           </div><!--close content_container-->
+
+          <div class="content_container">
+            <h3>Links:</h3>
+              <a href="http://blog.xuite.net/cschen07/blog"><img style="vertical-align: middle;" src="../images/blog-icon.png" title="Blog" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="http://jonathan2251.github.io/wr/index.html"><img style="vertical-align: middle;" src="../images/GitHub-Mark-32px.png" title="My writing" width="32" height="32" /></a>&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://www.linkedin.com/in/%E9%8D%BE%E6%A8%9E-%E9%99%B3-29714874"><img style="vertical-align: middle;" src="../images/Linkedin-icon.png" title="Linkedin" width="32" height="32" /></a>
+          </div><!--close content_container-->
+
 		  </div><!--close content_item-->
 
       <!--insert 3 space lines before footer-->
