--- a/ch1/mywork.html
+++ b/ch1/mywork.html
@@ -43,7 +43,8 @@
 	      <ul class="slideshow">
           <li class="show"><img width="940" height="250" src="../images/mywork_1.jpg" alt="&quot;LLVM backend 書籍&quot;" /></li>
           <li><img width="940" height="250" src="../images/mywork_2.jpg" alt="&quot;辛苦的工作&quot;" /></li>
-          </ul>
+          <li><img width="940" height="250" src="../images/mywork_3.jpg" alt="&quot;真複雜&quot;" /></li>
+        </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
     
