--- a/en/mywork.html
+++ b/en/mywork.html
@@ -43,7 +43,8 @@
 	      <ul class="slideshow">
           <li class="show"><img width="940" height="250" src="../images/mywork_1.jpg" alt="&quot;LLVM backend books&quot;" /></li>
           <li><img width="940" height="250" src="../images/mywork_2.jpg" alt="&quot;Working hard&quot;" /></li>
-          </ul>
+          <li><img width="940" height="250" src="../images/mywork_3.jpg" alt="&quot;Complicated&quot;" /></li>
+        </ul>
 	    </div><!--close slideshow-->
 	  </div><!--close slideshow_container-->
     
